<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.mykescraft.thelostjedi.ThirdQuestion"
    android:orientation="vertical"
    android:background="#424242">

    <TextView
        android:id="@+id/third_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_question"
        android:textColor="#FFD700"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:fontFamily="@font/deathstar"
        android:layout_marginTop="32dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:src="@drawable/colours_of_the_lightsabers"/>



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <RadioButton
            android:id="@+id/focusing_lens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/focusing_lens"
            android:textColor="#000000"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/deathstar"

            />

        <RadioButton
            android:id="@+id/chrystal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chrystal"
            android:textColor="#000000"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/deathstar"
            />

        <RadioButton
            android:id="@+id/energy_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/energy_cell"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:fontFamily="@font/deathstar"

            />

    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="#006064"
        android:textColor="#FFD700"
        android:onClick="rightThirdQuestion"
        android:fontFamily="@font/deathstar"
        />

</LinearLayout>