<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    tools:context="com.mykescraft.thelostjedi.FourthQuestion"
    android:orientation="vertical"
    android:background="#616161">

    <TextView
        android:id="@+id/fourth_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fourth_question"
        android:textColor="@color/starWarsYellow"
        android:layout_marginBottom="@dimen/padding_small"
        android:textSize="@dimen/fontsize"
        android:fontFamily="@font/deathstar"
        android:layout_marginTop="@dimen/padding_large"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:src="@drawable/yoda_teaching"/>



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <RadioButton
            android:id="@+id/ataru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ataru"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="@dimen/padding_small"
            android:background="@color/colorPrimaryWhite"
            android:fontFamily="@font/deathstar"

            />

        <RadioButton
            android:id="@+id/shii_cho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shii_cho"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="@dimen/padding_small"
            android:background="@color/colorPrimaryWhite"
            android:fontFamily="@font/deathstar"
            />

        <RadioButton
            android:id="@+id/makashi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/makashi"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorPrimaryWhite"
            android:fontFamily="@font/deathstar"

            />

    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@color/buttonBackground"
        android:textColor="@color/starWarsYellow"
        android:onClick="rightFourthQuestion"
        android:fontFamily="@font/deathstar"
        />

</LinearLayout>