<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    tools:context="com.mykescraft.thelostjedi.LastActivity"
    android:orientation="vertical"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/seventh_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_small"
        android:textSize="@dimen/fontsize"
        android:fontFamily="@font/deathstar"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/padding_medium"
        android:textSize="32sp"
        android:fontFamily="@font/deathstar"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/evaluation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/padding_medium"
        android:textSize="@dimen/fontsize"
        android:fontFamily="@font/deathstar"
        android:gravity="center_horizontal"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:src="@drawable/yoda"/>
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/button_restart"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:background="@color/buttonBackground"
        android:textColor="@color/starWarsYellow"
        android:onClick="restart"
        android:fontFamily="@font/deathstar"
        />

    <TextView
        android:id="@+id/thank_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/padding_small"
        android:textSize="10sp"
        android:fontFamily="@font/deathstar"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/mykescraft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mykes_craft"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/padding_small"
        android:textSize="10sp"
        android:fontFamily="@font/deathstar"
        android:gravity="center_horizontal"
        />


</LinearLayout>